<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="app_bar_title">US Election Info</string>

    <!-- TODO: Add necessary string values -->

    <!-- Fragment: Launch -->
    <string name="btn_upcoming_elections">Upcoming Elections</string>
    <string name="btn_representatives">Find my representatives</string>

    <!-- Fragment: Elections -->
    <string name="header_elections">Upcoming Elections</string>
    <string name="header_saved_elections">Saved Elections</string>

    <!-- Fragment: VoterInfo -->
    <string name="header_state">Election Information: %1$s</string>
    <string name="header_correspondence_address">State Election Office Correspondence Address</string>
    <string name="url_state_locations">Click here for voting location</string>
    <string name="url_state_ballot">Click here for ballot information</string>
    <string name="btn_follow_election">Follow election</string>
    <string name="btn_unfollow_election">Unfollow election</string>

    <!-- Fragment: Representative -->
    <string name="permission_denied_explanation">You need to grant location permission in order to
        play this game.</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled</string>
    <string name="representative_search">Representative Search</string>
    <string name="representative_title">My Representatives</string>
    <string name="btn_find_representatives">FIND MY REPRESENTATIVES</string>
    <string name="btn_use_location">USE MY LOCATION</string>
</resources>
